deploy: 2ed3045757feb743be249a52a7a1f19d5503afa4

--- a/css/theme-neon.css
+++ b/css/theme-neon.css
@@ -74,19 +74,20 @@
 body a#logo,
 body #logo svg,
 body #logo svg * {
-    color: var(--INTERNAL-MENU-SEARCH-color);
-    fill: var(--INTERNAL-MENU-SEARCH-color) !important;
+  color: var(--INTERNAL-MENU-SEARCH-BORDER-color);
+  fill: var(--INTERNAL-MENU-SEARCH-BORDER-color) !important;
 }
 
 body a#logo{
-    color: var(--INTERNAL-MENU-SEARCH-color);
+    color: #fff;
     text-shadow:
-        0 0  1px var(--INTERNAL-MENU-SEARCH-color),
-        0 0  2px var(--INTERNAL-MENU-SEARCH-color),
-        0 0  4px var(--INTERNAL-MENU-SEARCH-color),
+        0 0  1px #fff,
+        0 0  2px #fff,
+        0 0  4px #c0c0c0,
         0 0  8px #808080,
         0 0  4px var(--INTERNAL-MENU-SECTIONS-LINK-HOVER-color),
-        0 0  8px var(--INTERNAL-MENU-SECTIONS-LINK-HOVER-color);
+        0 0  8px var(--INTERNAL-MENU-SECTIONS-LINK-HOVER-color),
+        0 0  12px var(--INTERNAL-MENU-SECTIONS-LINK-HOVER-color);
 }
 
 body h1 {
