deploy: 9bb2fe70ede1e67428f528945d15cb08c55f68fb

--- a/css/print.css
+++ b/css/print.css
@@ -62,10 +62,12 @@ pre {
 #body code, #body strong, #body b,
 #body li, #body dd, #body dt,
 #body p,
-#body .anchor,
 #body a {
     /* better contrast for colored elements */
     color: black;
+}
+#body .anchor{
+    display: none;
 }
 #body pre,
 #body code {
@@ -158,7 +160,7 @@ rapi-doc{
     margin-left: -12px;
     width: calc( 100% + 12px + 8px );
 }
-.btn-default,
+.btn,
 #body .tab-nav-button {
     color: black !important;
 }
