--- a/css/theme-learn.css
+++ b/css/theme-learn.css
@@ -10,7 +10,6 @@
     --MAIN-TITLES-TEXT-color: #5e5e5e; /* Color of titles h2-h3-h4-h5-h6 */
     --MAIN-LINK-color: #00bdf3; /* Color of links */
     --MAIN-LINK-HOVER-color: #0082a7; /* Color of hovered links */
-    --MAIN-ANCHOR-color: #00bdf3; /* color of anchors on titles */
     --MAIN-BG-color: #ffffff; /* color of text by default */
 
     /* adjusted to base16-snazzy chroma style */
@@ -46,4 +45,15 @@
     --BOX-CAPTION-color: rgba( 255, 255, 255, 1 ); /* color of the title text */
     --BOX-BG-color: rgba( 255, 255, 255, .833 ); /* color of the content background */
     --BOX-TEXT-color: rgba( 16, 16, 16, 1 ); /* fixed color of the content text */
+}
+
+body a#logo,
+body #logo svg,
+body #logo svg * {
+    color: var(--INTERNAL-MENU-SEARCH-color);
+    fill: var(--INTERNAL-MENU-SEARCH-color) !important;
+}
+
+body a#logo:hover {
+    color: var(--INTERNAL-MENU-SEARCH-color);
 }
