--- a/css/theme-neon.css
+++ b/css/theme-neon.css
@@ -6,88 +6,81 @@
 @import "chroma-neon.css";
 
 :root {
-    --MAIN-TEXT-color: #e0e0e0; /* Color of text by default */
-    --MAIN-TITLES-TEXT-color: #f300b2; /* Color of titles h2-h3-h4-h5-h6 */
+    --PRIMARY-color: #f300b2; /* brand primary color */
+    --SECONDARY-color: #1c90f3; /* brand secondary color */
+
+    --MAIN-TEXT-color: #e0e0e0; /* text color of content and h1 titles */
+    --MAIN-LINK-HOVER-color: #4cabff; /* hoverd link color of content */
+    --MAIN-BG-color: #202020; /* background color of content */
 
     /* optional overwrites for specific headers */
-    --MAIN-TITLES-H3-color: #00f3d3; /* Color of h3 headlines */
-    --MAIN-TITLES-H4-color: #ffff00; /* Color of h4 headlines */
-
-    --MAIN-LINK-color: #1c90f3; /* Color of links */
-    --MAIN-LINK-HOVER-color: #4cabff; /* Color of hovered links */
-    --MAIN-ANCHOR-color: #4cabff; /* color of anchors on titles */
-    --MAIN-BG-color: #202020; /* color for code background */
+    --MAIN-TITLES-TEXT-color: #f300b2; /* text color of h2-h6 titles and transparent box titles */
+    --MAIN-TITLES-H3-color: #00f3d3; /* text color of h3-h6 titles */
+    --MAIN-TITLES-H4-color: #ffff00; /* text color of h4-h6 titles */
 
     /* adjusted to neon chroma style */
-    --CODE-BLOCK-color: #f8f8f2; /* fallback color for block code text */
-    --CODE-BLOCK-BG-color: #000000; /* fallback color for block code background */
-    --CODE-BLOCK-BORDER-color: #000000; /* color of block code border */
+    --CODE-BLOCK-color: #f8f8f2; /* fallback text color of block code; should be adjusted to your selected chroma style */
+    --CODE-BLOCK-BG-color: #000000; /* fallback background color of block code; should be adjusted to your selected chroma style */
 
-    --CODE-INLINE-color: #82e550; /* color for inline code text */
-    --CODE-INLINE-BG-color: #282a36; /* color for inline code background */
-    --CODE-INLINE-BORDER-color: #464646; /* color of inline code border */
+    --CODE-INLINE-color: #82e550; /* text color of inline code */
+    --CODE-INLINE-BG-color: #282a36; /* background color of inline code */
+    --CODE-INLINE-BORDER-color: #464646; /* border color of inline code */
 
     --MERMAID-theme: dark; /* name of the default Mermaid theme for this variant, can be overridden in config.toml */
     --SWAGGER-theme: dark; /* name of the default Swagger theme for this variant, can be overridden in config.toml */
 
-    --TAG-BG-color: #04d1b5; /* Background color of menu header */
+    --MENU-HEADER-BG-color: rgba( 0, 0, 0, 0 ); /* background color of menu header */
 
-    --MENU-HOME-LINK-color: #323232; /* Color of the home button text */
-    --MENU-HOME-LINK-HOVER-color: #5e5e5e; /* Color of the hovered home button text */
+    --MENU-HOME-LINK-color: #323232; /* home button color if configured */
+    --MENU-HOME-LINK-HOVER-color: #5e5e5e; /* hoverd home button color if configured */
 
-    --MENU-HEADER-BG-color: rgba( 0, 0, 0, 0 ); /* Background color of menu header */
-    --MENU-HEADER-BORDER-color: rgba( 0, 0, 0, 0 ); /*Color of menu header border */
+    --MENU-SEARCH-color: #e0e0e0; /* text and icon color of search box */
+    --MENU-SEARCH-BG-color: #323232; /* background color of search box */
+    --MENU-SEARCH-BORDER-color: #e0e0e0; /* border color of search box */
 
-    --MENU-SEARCH-color: #e0e0e0; /* Color of search field text */
-    --MENU-SEARCH-BG-color: #323232; /* Search field background color (by default borders + icons) */
-    --MENU-SEARCH-BORDER-color: #e0e0e0; /* Override search field border color */
+    --MENU-SECTIONS-BG-color: linear-gradient( 165deg, #f300b2d3 0%, #1c90f3b3 65%, #00e3d3b3 100% ); /* background of the menu; this is NOT just a color value but can be a complete CSS background definition including gradients, etc. */
+    --MENU-SECTIONS-ACTIVE-BG-color: rgba( 0, 0, 0, .166 ); /* background color of the active menu section */
+    --MENU-SECTIONS-LINK-color: #ffffff; /* link color of menu topics */
+    --MENU-SECTIONS-LINK-HOVER-color: #d0d0d0; /* hoverd link color of menu topics */
+    --MENU-SECTION-ACTIVE-CATEGORY-color: #56ffe8; /* text color of the displayed menu topic */
+    --MENU-SECTION-HR-color: #bababa; /* separator color of menu footer */
 
-    --MENU-SECTIONS-ACTIVE-BG-color: rgba( 0, 0, 0, .166 ); /* Background color of the active section and its children */
-    --MENU-SECTIONS-BG-color: linear-gradient( 165deg, #f300b2d3 0%, #1c90f3b3 65%, #00e3d3b3 100% ); /* Background color of side bar */
-    --MENU-SECTIONS-LINK-color: #ffffff; /* Color of links in menu */
-    --MENU-SECTIONS-LINK-HOVER-color: #d0d0d0;  /* Color of links in menu, when hovered */
-    --MENU-SECTION-ACTIVE-CATEGORY-color: #56ffe8; /* Color of active category text */
-    --MENU-SECTION-ACTIVE-CATEGORY-BG-color: #202020; /* Color of background for the active category (only) */
-
-    --MENU-VISITED-color: #33a1ff; /* Color of 'page visited' icons in menu */
-    --MENU-SECTION-HR-color: #bababa; /* Color of <hr> separator in menu */
+    --MENU-VISITED-color: #33a1ff; /* icon color of visited menu topics if configured */
 
     /* base styling for boxes */
-    --BOX-CAPTION-color: rgba( 240, 240, 240, 1 ); /* color of the title text */
-    --BOX-BG-color: rgba( 20, 20, 20, 1 ); /* color of the content background */
-    --BOX-TEXT-color: initial; /* automatic color of the content text */
+    --BOX-CAPTION-color: rgba( 240, 240, 240, 1 ); /* text color of colored box titles */
+    --BOX-BG-color: rgba( 20, 20, 20, 1 ); /* background color of colored boxes */
+    --BOX-TEXT-color: initial; /* text color of colored box content */
 
     /* optional base colors for colored boxes as in attachments and notice shortcode */
-    --BOX-BLUE-color: rgba( 48, 117, 229, 1 );
-    --BOX-GREEN-color: rgba( 42, 178, 24, 1 );
-    --BOX-GREY-color: rgba( 128, 128, 128, 1 );
-    --BOX-ORANGE-color: rgba( 237, 153, 9, 1 );
-    --BOX-RED-color: rgba( 224, 62, 62, 1 );
-
-    --BOX-BLUE-TEXT-color: var(--BOX-BLUE-color);
-    --BOX-GREEN-TEXT-color: var(--BOX-GREEN-color);
-    --BOX-GREY-TEXT-color: var(--BOX-GREY-color);
-    --BOX-ORANGE-TEXT-color: var(--BOX-ORANGE-color);
-    --BOX-RED-TEXT-color: var(--BOX-RED-color);
+    --BOX-BLUE-color: rgba( 48, 117, 229, 1 ); /* background color of blue boxes */
+    --BOX-BLUE-TEXT-color: var( --BOX-BLUE-color ); /* text color of blue boxes */
+    --BOX-GREEN-color: rgba( 42, 178, 24, 1 ); /* background color of green boxes */
+    --BOX-GREEN-TEXT-color: var( --BOX-GREEN-color ); /* text color of green boxes */
+    --BOX-GREY-color: rgba( 128, 128, 128, 1 ); /* background color of grey boxes */
+    --BOX-GREY-TEXT-color: var( --BOX-GREY-color ); /* text color of grey boxes */
+    --BOX-ORANGE-color: rgba( 237, 153, 9, 1 ); /* background color of orange boxes */
+    --BOX-ORANGE-TEXT-color: var( --BOX-ORANGE-color ); /* text color of orange boxes */
+    --BOX-RED-color: rgba( 224, 62, 62, 1 ); /* background color of red boxes */
+    --BOX-RED-TEXT-color: var( --BOX-RED-color ); /* text color of red boxes */
 }
 
 body a#logo,
 body #logo svg,
 body #logo svg * {
-  color: var(--INTERNAL-MENU-SEARCH-BORDER-color);
-  fill: var(--INTERNAL-MENU-SEARCH-BORDER-color) !important;
+    color: var(--INTERNAL-MENU-SEARCH-color);
+    fill: var(--INTERNAL-MENU-SEARCH-color) !important;
 }
 
 body a#logo{
-    color: #fff;
+    color: var(--INTERNAL-MENU-SEARCH-color);
     text-shadow:
-        0 0  1px #fff,
-        0 0  2px #fff,
-        0 0  4px #c0c0c0,
+        0 0  1px var(--INTERNAL-MENU-SEARCH-color),
+        0 0  2px var(--INTERNAL-MENU-SEARCH-color),
+        0 0  4px var(--INTERNAL-MENU-SEARCH-color),
         0 0  8px #808080,
         0 0  4px var(--INTERNAL-MENU-SECTIONS-LINK-HOVER-color),
-        0 0  8px var(--INTERNAL-MENU-SECTIONS-LINK-HOVER-color),
-        0 0  12px var(--INTERNAL-MENU-SECTIONS-LINK-HOVER-color);
+        0 0  8px var(--INTERNAL-MENU-SECTIONS-LINK-HOVER-color);
 }
 
 body h1 {
@@ -190,25 +183,45 @@ body .anchor {
     text-shadow: none;
 }
 
+body .btn,
 body div.box {
     box-shadow:
         0 0  1px #fff,
         0 0  2px #fff,
         0 0  4px #808080,
-        0 0  4px var(--VARIABLE-BOX-color),
-        0 0  8px var(--VARIABLE-BOX-color);
+        0 0  4px var(--VARIABLE-BOX-color);
 }
 
+body .btn,
 body div.box > .box-label {
     text-shadow:
         0 0  1px #fff,
         0 0  2px #fff,
         0 0  4px #808080,
-        0 0  4px var(--VARIABLE-BOX-CAPTION-color),
-        0 0  8px var(--VARIABLE-BOX-CAPTION-color);
+        0 0  4px var(--VARIABLE-BOX-CAPTION-color);
 }
 
-body div.box.transparent {
+body .btn.cstyle {
+    --VARIABLE-BOX-TEXT-color: var(--VARIABLE-BOX-CAPTION-color);
+}
+
+body .btn.cstyle.transparent {
+    --VARIABLE-BOX-BG-color: var(--INTERNAL-BOX-BG-color);
+}
+
+body .btn.cstyle.transparent a {
+    border-color: var(--VARIABLE-BOX-color);
+    color: var(--VARIABLE-BOX-CAPTION-color);
+}
+
+body .btn.cstyle.transparent a:hover,
+body .btn.cstyle.transparent a:focus,
+body .btn.cstyle.transparent a:active {
+    background-color: var(--INTERNAL-MAIN-TITLES-TEXT-color);
+    color: var(--INTERNAL-MAIN-TEXT-color);
+}
+
+body .box.cstyle.transparent {
     box-shadow: none;
 }
 
@@ -221,6 +234,7 @@ body div.box.transparent {
     #body h6 {
         text-shadow: none;
     }
+    #body .btn,
     #body div.box,
     #body div.box > .box-label {
         box-shadow: none;
@@ -238,6 +252,7 @@ above will not apply, so we have to repeat it here */
 .print #body h6 {
     text-shadow: none;
 }
+.print #body .btn,
 .print #body div.box,
 .print #body div.box > .box-label {
     box-shadow: none;
