--- a/css/theme-relearn-light.css
+++ b/css/theme-relearn-light.css
@@ -6,44 +6,38 @@
 @import "chroma-relearn-light.css";
 
 :root {
-    --MAIN-TEXT-color: #101010; /* Color of text by default */
-    --MAIN-TITLES-TEXT-color: #4a4a4a; /* Color of titles h2-h3-h4-h5-h6 */
-    --MAIN-LINK-color: #486ac9; /* Color of links */
-    --MAIN-LINK-HOVER-color: #134fbf; /* Color of hovered links */
-    --MAIN-ANCHOR-color: #134fbf; /* color of anchors on titles */
-    --MAIN-BG-color: #ffffff; /* color of text by default */
+    --PRIMARY-color: #7dc903; /* brand primary color */
+    --SECONDARY-color: #486ac9; /* brand secondary color */
+
+    --MAIN-TEXT-color: #101010; /* text color of content and h1 titles */
+    --MAIN-LINK-HOVER-color: #202891; /* hoverd link color of content */
+    --MAIN-BG-color: #ffffff; /* background color of content */
+    --MAIN-TITLES-TEXT-color: #4a4a4a; /* text color of h2-h6 titles and transparent box titles */
 
     /* adjusted to relearn-light chroma style */
-    --CODE-BLOCK-color: #000000; /* fallback color for block code text */
-    --CODE-BLOCK-BG-color: #f8f8f8; /* fallback color for block code background */
-    --CODE-BLOCK-BORDER-color: #d8d8d8; /* color of block code border */
+    --CODE-BLOCK-color: #000000; /* fallback text color of block code; should be adjusted to your selected chroma style */
+    --CODE-BLOCK-BG-color: #f8f8f8; /* fallback background color of block code; should be adjusted to your selected chroma style */
+    --CODE-BLOCK-BORDER-color: #d8d8d8; /* border color of block code */
 
-    --CODE-INLINE-color: #5e5e5e; /* color for inline code text */
-    --CODE-INLINE-BG-color: #fffae9; /* color for inline code background */
-    --CODE-INLINE-BORDER-color: #f8e8c8; /* color of inline code border */
+    --CODE-INLINE-color: #5e5e5e; /* text color of inline code */
+    --CODE-INLINE-BG-color: #fffae9; /* background color of inline code */
+    --CODE-INLINE-BORDER-color: #f8e8c8; /* border color of inline code */
 
-    --MENU-HOME-LINK-color: #323232; /* Color of the home button text */
-    --MENU-HOME-LINK-HOVER-color: #808080; /* Color of the hovered home button text */
+    --MENU-HOME-LINK-color: #323232; /* home button color if configured */
+    --MENU-HOME-LINK-HOVER-color: #808080; /* hoverd home button color if configured */
 
-    --MENU-HEADER-BG-color: #7dc903; /* Background color of menu header */
-    --MENU-HEADER-BORDER-color: #7dc903; /*Color of menu header border */
+    --MENU-SEARCH-color: #e0e0e0; /* text and icon color of search box */
+    --MENU-SEARCH-BG-color: #323232; /* background color of search box */
+    --MENU-SEARCH-BORDER-color: #e0e0e0; /* border color of search box */
 
-    --MENU-SEARCH-color: #e0e0e0; /* Color of search field text */
-    --MENU-SEARCH-BG-color: #323232; /* Search field background color (by default borders + icons) */
-    --MENU-SEARCH-BORDER-color: #e0e0e0; /* Override search field border color */
+    --MENU-SECTIONS-BG-color: #282828; /* background of the menu; this is NOT just a color value but can be a complete CSS background definition including gradients, etc. */
+    --MENU-SECTIONS-ACTIVE-BG-color: rgba( 0, 0, 0, .166 ); /* background color of the active menu section */
+    --MENU-SECTIONS-LINK-color: #bababa; /* link color of menu topics */
+    --MENU-SECTIONS-LINK-HOVER-color: #ffffff; /* hoverd link color of menu topics */
+    --MENU-SECTION-ACTIVE-CATEGORY-color: #444444; /* text color of the displayed menu topic */
+    --MENU-SECTION-HR-color: #606060; /* separator color of menu footer */
 
-    --MENU-SECTIONS-ACTIVE-BG-color: rgba( 0, 0, 0, .166 ); /* Background color of the active section and its children */
-    --MENU-SECTIONS-BG-color: #282828; /* Background color of other sections */
-    --MENU-SECTIONS-LINK-color: #bababa; /* Color of links in menu */
-    --MENU-SECTIONS-LINK-HOVER-color: #ffffff;  /* Color of links in menu, when hovered */
-    --MENU-SECTION-ACTIVE-CATEGORY-color: #444444; /* Color of active category text */
-    --MENU-SECTION-ACTIVE-CATEGORY-BG-color: #ffffff; /* Color of background for the active category (only) */
-
-    --MENU-VISITED-color: #506397; /* Color of 'page visited' icons in menu */
-    --MENU-SECTION-HR-color: #606060; /* Color of <hr> separator in menu */
-
-    /* base styling for boxes */
-    --BOX-CAPTION-color: rgba( 255, 255, 255, 1 ); /* color of the title text */
-    --BOX-BG-color: rgba( 255, 255, 255, .833 ); /* color of the content background */
-    --BOX-TEXT-color: rgba( 16, 16, 16, 1 ); /* fixed color of the content text */
+    --BOX-CAPTION-color: rgba( 255, 255, 255, 1 ); /* text color of colored box titles */
+    --BOX-BG-color: rgba( 255, 255, 255, .833 ); /* background color of colored boxes */
+    --BOX-TEXT-color: rgba( 16, 16, 16, 1 ); /* text color of colored box content */
 }
