--- a/css/variant.css
+++ b/css/variant.css
@@ -1,9 +1,13 @@
 :root {
+    /* initially use section background to avoid flickering on load when a non default variant is active;
+    this is only possible because every color variant defines this variable, otherwise we would have been lost */
+    --INTERNAL-PRIMARY-color: var(--PRIMARY-color, var(--MENU-HEADER-BG-color, rgba( 0, 0, 0, 0 ))); /* not --INTERNAL-MENU-HEADER-BG-color */
+    --INTERNAL-SECONDARY-color: var(--SECONDARY-color, var(--MAIN-LINK-color, #486ac9)); /* not --INTERNAL-MAIN-LINK-color */
+
     --INTERNAL-MAIN-TEXT-color: var(--MAIN-TEXT-color, #101010);
     --INTERNAL-MAIN-TITLES-TEXT-color: var(--MAIN-TITLES-TEXT-color, #4a4a4a);
-    --INTERNAL-MAIN-LINK-color: var(--MAIN-LINK-color, #486ac9);
+    --INTERNAL-MAIN-LINK-color: var(--MAIN-LINK-color, var(--SECONDARY-color, #486ac9)); /* not --INTERNAL-SECONDARY-color */
     --INTERNAL-MAIN-LINK-HOVER-color: var(--MAIN-LINK-HOVER-color, var(--INTERNAL-MAIN-LINK-color));
-    --INTERNAL-MAIN-ANCHOR-color: var(--MAIN-ANCHOR-color, var(--INTERNAL-MAIN-LINK-HOVER-color));
     --INTERNAL-MAIN-BG-color: var(--MAIN-BG-color, #ffffff);
 
     --INTERNAL-MAIN-TITLES-H1-color: var(--MAIN-TITLES-H1-color, var(--INTERNAL-MAIN-TEXT-color));
@@ -36,11 +40,9 @@
     --INTERNAL-MERMAID-theme: var(--CONFIG-MERMAID-theme, var(--MERMAID-theme, default));
     --INTERNAL-SWAGGER-theme: var(--CONFIG-SWAGGER-theme, var(--SWAGGER-theme, light));
 
-    --INTERNAL-TAG-BG-color: var(--TAG-BG-color, var(--INTERNAL-MENU-HEADER-BG-color));
+    --INTERNAL-TAG-BG-color: var(--TAG-BG-color, var(--INTERNAL-PRIMARY-color));
 
-    /* initially use section background to avoid flickering on load when a non default variant is active;
-    this is only possible because every color variant defines this variable, otherwise we would have been lost */
-    --INTERNAL-MENU-HEADER-BG-color: var(--MENU-HEADER-BG-color, rgba( 0, 0, 0, 0 ));
+    --INTERNAL-MENU-HEADER-BG-color: var(--MENU-HEADER-BG-color, var(--PRIMARY-color, rgba( 0, 0, 0, 0 ))); /* not --INTERNAL-PRIMARY-color */
     --INTERNAL-MENU-HEADER-BORDER-color: var(--MENU-HEADER-BORDER-color, var(--INTERNAL-MENU-HEADER-BG-color));
 
     --INTERNAL-MENU-HOME-LINK-color: var(--MENU-HOME-LINK-color, #323232);
@@ -57,7 +59,7 @@
     --INTERNAL-MENU-SECTION-ACTIVE-CATEGORY-color: var(--MENU-SECTION-ACTIVE-CATEGORY-color, #444444);
     --INTERNAL-MENU-SECTION-ACTIVE-CATEGORY-BG-color: var(--MENU-SECTION-ACTIVE-CATEGORY-BG-color, var(--INTERNAL-MAIN-BG-color));
 
-    --INTERNAL-MENU-VISITED-color: var(--MENU-VISITED-color, #506397);
+    --INTERNAL-MENU-VISITED-color: var(--MENU-VISITED-color, var(--INTERNAL-SECONDARY-color));
     --INTERNAL-MENU-SECTION-HR-color: var(--MENU-SECTION-HR-color, #606060);
 
     --INTERNAL-BOX-CAPTION-color: var(--BOX-CAPTION-color, rgba( 255, 255, 255, 1 ));
@@ -96,13 +98,16 @@ body {
 }
 
 a,
-#toc-menu {
+.anchor,
+#toc-menu,
+#body a.highlight:after {
     color: var(--INTERNAL-MAIN-LINK-color);
 }
 
 a:hover,
+.anchor:hover,
 #toc-menu:hover,
-#body a.highlight:after {
+#body a.highlight:hover:after {
     color: var(--INTERNAL-MAIN-LINK-HOVER-color);
 }
 
@@ -188,6 +193,88 @@ h6 {
     font-family: var(--INTERNAL-MAIN-TITLES-H6-font);
 }
 
+div.box {
+    background-color: var(--VARIABLE-BOX-color);
+}
+
+div.box > .box-label {
+    color: var(--VARIABLE-BOX-CAPTION-color);
+}
+
+div.box > .box-content {
+    background-color: var(--VARIABLE-BOX-BG-color);
+    color: var(--VARIABLE-BOX-TEXT-color);
+}
+
+.cstyle.info {
+    --VARIABLE-BOX-color: var(--INTERNAL-BOX-INFO-color);
+    --VARIABLE-BOX-TEXT-color: var(--INTERNAL-BOX-INFO-TEXT-color);
+}
+
+.cstyle.warning {
+    --VARIABLE-BOX-color: var(--INTERNAL-BOX-WARNING-color);
+    --VARIABLE-BOX-TEXT-color: var(--INTERNAL-BOX-WARNING-TEXT-color);
+}
+
+.cstyle.note {
+    --VARIABLE-BOX-color: var(--INTERNAL-BOX-NOTE-color);
+    --VARIABLE-BOX-TEXT-color: var(--INTERNAL-BOX-NOTE-TEXT-color);
+}
+
+.cstyle.tip {
+    --VARIABLE-BOX-color: var(--INTERNAL-BOX-TIP-color);
+    --VARIABLE-BOX-TEXT-color: var(--INTERNAL-BOX-TIP-TEXT-color);
+}
+
+.cstyle.primary {
+    --VARIABLE-BOX-color: var(--INTERNAL-PRIMARY-color);
+    --VARIABLE-BOX-TEXT-color: var(--INTERNAL-MAIN-TEXT-color);
+}
+
+.cstyle.secondary {
+    --VARIABLE-BOX-color: var(--INTERNAL-SECONDARY-color);
+    --VARIABLE-BOX-TEXT-color: var(--INTERNAL-MAIN-TEXT-color);
+}
+
+.cstyle.blue {
+    --VARIABLE-BOX-color: var(--INTERNAL-BOX-BLUE-color);
+    --VARIABLE-BOX-TEXT-color: var(--INTERNAL-BOX-BLUE-TEXT-color);
+}
+
+.cstyle.green {
+    --VARIABLE-BOX-color: var(--INTERNAL-BOX-GREEN-color);
+    --VARIABLE-BOX-TEXT-color: var(--INTERNAL-BOX-GREEN-TEXT-color);
+}
+
+.cstyle.grey {
+    --VARIABLE-BOX-color: var(--INTERNAL-BOX-GREY-color);
+    --VARIABLE-BOX-TEXT-color: var(--INTERNAL-BOX-GREY-TEXT-color);
+}
+
+.cstyle.orange {
+    --VARIABLE-BOX-color: var(--INTERNAL-BOX-ORANGE-color);
+    --VARIABLE-BOX-TEXT-color: var(--INTERNAL-BOX-ORANGE-TEXT-color);
+}
+
+.cstyle.red {
+    --VARIABLE-BOX-color: var(--INTERNAL-BOX-RED-color);
+    --VARIABLE-BOX-TEXT-color: var(--INTERNAL-BOX-RED-TEXT-color);
+}
+
+.cstyle.transparent {
+    --VARIABLE-BOX-color: transparent;
+    --VARIABLE-BOX-CAPTION-color: var(--INTERNAL-MAIN-TITLES-TEXT-color);
+    --VARIABLE-BOX-BG-color: transparent;
+    --VARIABLE-BOX-TEXT-color: var(--INTERNAL-MAIN-TEXT-color);
+}
+
+code,
+kbd,
+pre,
+samp {
+    font-family: var(--INTERNAL-CODE-font);
+}
+
 code {
     background-color: var(--INTERNAL-CODE-INLINE-BG-color);
     border-color: var(--INTERNAL-CODE-INLINE-BORDER-color);
@@ -204,7 +291,7 @@ div.featherlight .featherlight-content{
     background-color: var(--INTERNAL-MAIN-BG-color);
 }
 
-body #topbar {
+#topbar {
     background-color: var(--INTERNAL-MAIN-BG-color);
 }
 
@@ -216,6 +303,7 @@ body #topbar {
     background-color: var(--INTERNAL-CODE-INLINE-BG-color);
     border-color: var(--INTERNAL-CODE-INLINE-BORDER-color);
     color: var(--INTERNAL-CODE-INLINE-color);
+    font-family: var(--INTERNAL-CODE-font);
 }
 
 .copy-to-clipboard-button:hover {
@@ -236,7 +324,7 @@ pre .copy-to-clipboard-button:hover {
 
 #homelinks {
     background-color: var(--INTERNAL-MENU-HEADER-BORDER-color);
-    border-bottom-color: var(--INTERNAL-MENU-HEADER-BORDER-color);
+    border-color: var(--INTERNAL-MENU-HEADER-BORDER-color);
 }
 
 #homelinks a {
@@ -251,22 +339,43 @@ pre .copy-to-clipboard-button:hover {
     background-color: var(--INTERNAL-MAIN-LINK-color);
 }
 
+#body a.highlight:hover:after {
+    background-color: var(--INTERNAL-MAIN-LINK-HOVER-color);
+}
+
 .progress {
     background-color: var(--INTERNAL-MAIN-BG-color);
 }
 
-.btn-default {
-    color: var(--INTERNAL-MAIN-TEXT-color) !important;
+.btn {
+    background-color: var(--VARIABLE-BOX-color);
 }
 
-.btn-default:hover,
-.btn-default:focus,
-.btn-default:active {
-    color: var(--INTERNAL-MAIN-BG-color) !important;
+.btn a {
+    border-color: var(--VARIABLE-BOX-color);
+    color: var(--VARIABLE-BOX-CAPTION-color);
 }
 
-.anchor {
-    color: var(--INTERNAL-MAIN-ANCHOR-color);
+.btn a:hover,
+.btn a:focus,
+.btn a:active {
+    background-color: var(--VARIABLE-BOX-BG-color);
+    color: var(--VARIABLE-BOX-TEXT-color);
+}
+
+.btn.cstyle.transparent {
+    --VARIABLE-BOX-BG-color: var(--INTERNAL-BOX-BG-color);
+}
+
+.btn.cstyle.transparent:hover,
+.btn.cstyle.transparent:focus,
+.btn.cstyle.transparent:active {
+    background-color: var(--INTERNAL-BOX-NEUTRAL-color);
+}
+
+.btn.cstyle.transparent a {
+    --VARIABLE-BOX-color: var(--INTERNAL-BOX-NEUTRAL-color);
+    --VARIABLE-BOX-TEXT-color: var(--VARIABLE-BOX-CAPTION-color);
 }
 
 #body .tags a.tag-link {
@@ -285,108 +394,4 @@ pre .copy-to-clipboard-button:hover {
 #body .tab-nav-button.active {
     background-color: var(--INTERNAL-MAIN-BG-color) !important;
     border-bottom-color: var(--INTERNAL-MAIN-BG-color) !important;
-}
-
-div.box {
-    background-color: var(--INTERNAL-BOX-NEUTRAL-color);
-}
-
-div.box > .box-label {
-    color: var(--INTERNAL-BOX-CAPTION-color);
-}
-
-div.box > .box-content {
-    background-color: var(--INTERNAL-BOX-BG-color);
-    color: var(--INTERNAL-BOX-NEUTRAL-TEXT-color);
-}
-
-div.box.info {
-    background-color: var(--INTERNAL-BOX-INFO-color);
-}
-
-div.box.info > .box-content {
-    color: var(--INTERNAL-BOX-INFO-TEXT-color);
-}
-
-div.box.warning {
-    background-color: var(--INTERNAL-BOX-WARNING-color);
-}
-
-div.box.warning > .box-content {
-    color: var(--INTERNAL-BOX-WARNING-TEXT-color);
-}
-
-div.box.note {
-    background-color: var(--INTERNAL-BOX-NOTE-color);
-}
-
-div.box.note > .box-content {
-    color: var(--INTERNAL-BOX-NOTE-TEXT-color);
-}
-
-div.box.tip {
-    background-color: var(--INTERNAL-BOX-TIP-color);
-}
-
-div.box.tip > .box-content {
-    color: var(--INTERNAL-BOX-TIP-TEXT-color);
-}
-
-div.box.blue {
-    background-color: var(--INTERNAL-BOX-BLUE-color);
-}
-
-div.box.blue > .box-content {
-    color: var(--INTERNAL-BOX-BLUE-TEXT-color);
-}
-
-div.box.green {
-    background-color: var(--INTERNAL-BOX-GREEN-color);
-}
-
-div.box.green > .box-content {
-    color: var(--INTERNAL-BOX-GREEN-TEXT-color);
-}
-
-div.box.grey {
-    background-color: var(--INTERNAL-BOX-GREY-color);
-}
-
-div.box.grey > .box-content {
-    color: var(--INTERNAL-BOX-GREY-TEXT-color);
-}
-
-div.box.orange {
-    background-color: var(--INTERNAL-BOX-ORANGE-color);
-}
-
-div.box.orange > .box-content {
-    color: var(--INTERNAL-BOX-ORANGE-TEXT-color);
-}
-
-div.box.red {
-    background-color: var(--INTERNAL-BOX-RED-color);
-}
-
-div.box.red > .box-content {
-    color: var(--INTERNAL-BOX-RED-TEXT-color);
-}
-
-div.box.transparent > .box-label {
-    color: var(--INTERNAL-MAIN-TITLES-TEXT-color);
-}
-
-div.box.transparent > .box-content {
-    color: var(--INTERNAL-MAIN-TEXT-color);
-}
-
-code,
-kbd,
-pre,
-samp {
-    font-family: var(--INTERNAL-CODE-font);
-}
-
-.copy-to-clipboard-button {
-    font-family: var(--INTERNAL-CODE-font);
 }
